Fix the overflowing grid-items
By using grid layout I have been able to fix the overflowing grids
which were occurring in specific number of grids like 22, 29 ...

--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,7 @@ h1 {
  }
 
  #container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
     height: 400px;
     width: 400px;
     border: none;
